--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <h2>Fonctionnement</h2>
 
             <ol>
-                <li>Choisissez un restaurant</li>
-                <li>composez vitre menu</li>
-                <li>dégustez au restaurant</li>
+                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i> composez vitre menu</li>
+                <li><i class="fas fa-store"></i>dégustez au restaurant</li>
             </ol>
         </section>
 
