ajout counters pour tuto bullet

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
             <ol>
                 <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                <li><i class="fas fa-list-ul"></i> composez vitre menu</li>
-                <li><i class="fas fa-store"></i>dégustez au restaurant</li>
+                <li><i class="fas fa-list-ul"></i> Composez vitre menu</li>
+                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
 
