ajout du loader

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <!-- LOADER -->
 
     <div class="loader">
-        <!-- <i class="fas fa-pizza-slice fa-3x fa-spin"></i> -->
+        <i class="fas fa-pizza-slice fa-3x fa-spin"></i>
     </div>
 
         <!-- HEADER -->
