--- a/pages/resto-1.html
+++ b/pages/resto-1.html
@@ -25,7 +25,7 @@
 
 
     <div class="banner">
-      <img src="../../images/restaurants/menu-1.jpg" alt="restautant 1">  
+      <img src="../images/restaurants/menu-1.jpg" alt="restaurant 1">  
     </div>
 
     
