--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="../Ohmyfood1/images/restaurants/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Ohmyfood1/images/restaurants/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/restaurants/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/restaurants/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/restaurants/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/restaurants/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
      <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
