--- a/pages/resto-1.html
+++ b/pages/resto-1.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../images/restaurants/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-   <link rel="stylesheet" href="../../style.css">
+   <link rel="stylesheet" href="../style.css">
    <title>La palette du goût</title>
 </head>
 <body id="page-resto">
