--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </a>
 
-            <a href="./pages/resto-3.html" class="card new">
+            <a href="./pages/resto-3.html" class="card ">
                 <div class="card__image card__image-3"></div>
                 <div class="card__description">
                     <h3>A la française</h3>
@@ -100,7 +100,7 @@
                 </div>
             </a>
 
-            <a href="./pages/resto-4.html" class="card new">
+            <a href="./pages/resto-4.html" class="card">
                 <div class="card__image card__image-4"></div>
                 <div class="card__description">
                     <h3>Le délice des sens</h3>
